fix: zebra striping in dark mode (#830)

--- a/docs/src/styles/index.css
+++ b/docs/src/styles/index.css
@@ -271,7 +271,7 @@ table {
 
 /* Zebra striping */
 tr:nth-of-type(odd) {
-	background: var(--theme-bg-hover);
+	background: var(--theme-bg-offset);
 }
 th {
 	background: var(--color-black);
